--- a/settings/settings.html
+++ b/settings/settings.html
@@ -8,11 +8,15 @@
 <link rel="stylesheet" href="../common/common.css">
 <script src="../common/jquery-3.5.1.js"></script>
 <script src="settings.js"></script>
+<script src="../common/vue.js"></script>
+<script src="../templates/vueHeader.js"></script>
+<link rel="stylesheet" href="../templates/header.css">
 </head>
 <body>
-<?php
-include_once("../templates/header.php");
-?>
+<div id="vue_header_container">
+	<myheader></myheader>
+</div>
+
 <b class="title">تنظیمات</b>
 <div id="container">
 	
