--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
+<!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
 </head>
 <body>
-	<div id="vue_container">
-		
-		<div class="background-color"></div>
-		<buttons-panel></buttons-panel>
-		
-		<pages-container>
+	<div id="app">
+		<div id="container">
 			<router-view></router-view>
-		</pages-container>
+		</div>
+		
+		<nav-bar></nav-bar>
 	</div>
 	<script src="loader.js"></script>
 </body>
