--- a/tests/index.html
+++ b/tests/index.html
@@ -1,19 +1,14 @@
 <html>
 	<head>
-		<style>
-			.right-side{
-				background-color:blue;
-				color:white;
-			}
-			
-		</style>
+		
 	</head>
 	<body>
 		<div id="app">
-			<com v-bind:name_t="name"></com>
+			{{count}}
 		</div>
 		<script src="../archive/vue.js"></script>
 		<script src="../archive/vue-router.js"></script>
+		<script src="../archive/vuex.js"></script>
 		<script src="index.js"></script>
 	</body>
 </html>
