--- a/tests/index.html
+++ b/tests/index.html
@@ -4,9 +4,10 @@
 	</head>
 	<body>
 		<div id="app">
-			{{count}}
+			
 		</div>
 		<script src="../archive/vue.js"></script>
+		<script src="../archive/jquery-3.5.1.js"></script>
 		<script src="../archive/vue-router.js"></script>
 		<script src="../archive/vuex.js"></script>
 		<script src="index.js"></script>
