--- a/new_report/index.html
+++ b/new_report/index.html
@@ -5,11 +5,13 @@
 <script src='../common/components/report-option/index.js'></script>
 <link rel="stylesheet" href="../common/common.css">
 <link rel="stylesheet" href="./styles.css">
+<script src="../common/common.js"></script>
+<script src="../api/localStorageApi.js"></script>
+<script src="./codes.js"></script>
 <div class="appFrame">
 	<div class="container-top">
 		<div id="new-report">
 			<div class="container-fluid">
-			
 				<div class="row mt-2">
 					<h1 class="text-primary">new_report</h1>
 				</div>
@@ -48,10 +50,10 @@
 				
 				<div class="row mt-3 mb-3">
 					<div class="col-8 d-grid">
-						<button class="btn btn-primary" v-on:click="add_new_report">save report</button>
+						<button class="btn btn-primary" id="add_new_report">save report</button>
 					</div>
 					<div class="col-4 d-flex justify-content-end">
-						<button class="btn btn-outline-danger" v-on:click="discard">discard</button>
+						<button class="btn btn-outline-danger" id="discard">discard</button>
 					</div>
 				</div>
 			</div>
