switching to electron is almost done

--- a/reporto/result/index.html
+++ b/reporto/result/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="../common/components/nav-bar/nav-bar.css">
 <link rel="stylesheet" href="../common/lib/bootstrap.min.css">
 <link rel="shortcut icon" href="../common/logo-final.jpg" type="image/x-icon">
-<script src="../api/localStorageApi.js"></script>
+<script src="../../apiClass.js"></script>
 <link rel="stylesheet" href="../common/common.css">
 <script src="./codes.js"></script>
 <div class="appFrame">
