--- a/reporto/settings/index.html
+++ b/reporto/settings/index.html
@@ -4,6 +4,7 @@
 <link rel="shortcut icon" href="../common/logo-final.jpg" type="image/x-icon">
 <link rel="stylesheet" href="./styles.css">
 <link rel="stylesheet" href="../common/common.css">
+<script src="../../apiClass.js"></script>
 <script src="./codes.js"></script>
 <div class="appFrame">
 	<div class="container-top">
