--- a/reporto/new_report/index.html
+++ b/reporto/new_report/index.html
@@ -6,8 +6,17 @@
 <link rel="stylesheet" href="../common/common.css">
 <link rel="stylesheet" href="./styles.css">
 <script src="../common/common.js"></script>
-<script src="../api/localStorageApi.js"></script>
+<script src="../../apiClass.js"></script>
 <script src="./codes.js"></script>
+<script>
+	const {ipcRenderer} = require('electron')
+</script>
+<button id="quit_app">x</button>
+<script>
+	document.getElementById('quit_app').onclick = function(){
+		ipcRenderer.sendSync('quit_app','empty')
+	}
+</script>
 <div class="appFrame">
 	<div class="container-top">
 		<div id="new-report">
