--- a/reporto/reports/index.html
+++ b/reporto/reports/index.html
@@ -4,7 +4,7 @@
 <link rel="shortcut icon" href="../common/logo-final.jpg" type="image/x-icon">
 <script src='../common/components/report-option/index.js'></script>
 <link rel="stylesheet" href="../common/common.css">
-<script src="../api/localStorageApi.js"></script>
+<script src='../../apiClass.js'></script>
 <script src="./codes.js"></script>
 <link rel="stylesheet" href="../common/components/report-option/styles.css">
 <link rel="stylesheet" href="./styles.css">
