--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="position: relative;height: 100%;width: 100%;"></div>
     
   </body>
 </html>
